# nav

./: .codecov.yml  .dockerignore  .git-blame-ignore-revs  .gitignore  .hgignore  .mega-linter.yml  .pre-commit-config.yaml  .readthedocs.yaml  .sonarcloud.properties  AUTHORS  AUTHORS.rst  CHANGELOG.md  CHANGES  CLAUDE.md  Dockerfile  Dockerfile.test  Dockerfile3  HACKING  HISTORY  INSTALL  INSTALL.rst  Jenkinsfile  Jenkinsfile-common  Jenkinsfile3  MANIFEST.in  Makefile  Makefile.am  Makefile.in  NOTES  NOTES.rst  README  README.rst  VENDORED.rst  VERSION  Vagrantfile  autogen.sh  common.mk  configure.ac  configure.in  constraints.txt  (+16 more)
doc/: Makefile.am  Makefile.in  boks2db.doc  conf.py  contents.rst  contents.txt  getgw.doc  getgwport.doc  getkant.doc  getsw.doc  getswport.doc  getting-started.txt  glossary.txt  index.rst  index.txt  install.rst  msg_and_maint_db.dia  nav-flowchart.dia  overview.rst  prefiks2db.doc  release-notes.rst  release-procedure.txt  requirements.txt  smsd.txt  snmptrapd.txt  startstop.txt  txt2db.doc  type2db.doc
doc/_static/: custom.css
doc/apache/: README  httpd.conf.example  httpd2.conf.example  nav-httpd.conf
doc/api/: mibretriever.rst  openapi.yml  searchproviders.rst  sensor.rst
doc/conf/: db.conf  nav.conf
doc/cricket/: README  cricket.dia  cricket.eps  doc-oppsett.txt
doc/exts/: alerttypes.py  alerttypes.rst.j2  xref.py
doc/faq/: cannot_update.rst  faq.rst  faq.txt  graph_gaps.rst
doc/geomap/: README  README.rst
doc/hacking/: adding-environment-probe-support.rst  extending-nav-locally.rst  hacking-with-pycharm.rst  hacking.rst  index.rst  javascript.rst  netmap.rst  release-procedure.rst  snmp-tunnels.rst  using-devcontainers.rst  using-docker.rst  using-heavyweight-docker.rst  using-lightweight-docker.rst  using-vagrant.rst  vagrant.rst  virtual-machines.rst  web-interface-customization.rst  writing-a-servicemon-plugin.rst
doc/hg2git/: README.rst  hg2gitmapping.txt
doc/howto/: allauth-and-oidc.rst  api_parameters.rst  commandline-utilities.rst  debugging-topology.rst  debugging-topology.txt  email.rst  generic-install-from-source.rst  hacking-with-pycharm.rst  index.rst  installing-graphite-on-debian.rst  integrating-graphite-with-nav.rst  manual-install-on-debian.rst  migrate-data.rst  migrate-dhcpstats.rst  migrate-rrd-to-graphite.rst  mod_auth_mellon_feide.rst  mod_auth_openidc_feide.rst  securing-nav-in-production.rst  setting-up-logging.rst  tuning_graphite.rst  using-vagrant.rst  using_the_api.rst  vagrant.rst
doc/intro/: getting-organized.rst  getting-started.rst  getting-started.txt  install.rst  install.txt
doc/mailin/: README
doc/navuser/: todo.txt
doc/programs/: index.rst  index.txt  smsd.rst
doc/radius/: INSTALL  INSTALL.rst  INSTALL.txt  README.rst  README.txt
doc/reference/: alerttypes.rst  arnold.rst  arnold.txt  authentication.rst  backend-processes.rst  cabling_and_patch.rst  dhcpstats.rst  event-templates.rst  eventengine.rst  external_authentication.rst  geomap.rst  geomap.txt  index.rst  index.txt  ipam.rst  ipdevpoll.rst  javascript.rst  jwt.rst  ldap.rst  ldap.txt  mailin.rst  mailin.txt  management-profiles.rst  mfa.rst  models-event.rst  models-manage.rst  navstats.rst  netmap.rst  portadmin.rst  portadmin.txt  radius-install.rst  radius.rst  remote_user.rst  smsd.rst  snmptrapd.rst  snmptrapd.txt  social-account.rst  vagrant.rst  virtual-machines.rst  web_authentication.rst
doc/sql/: README  arnold.sql  createdb.sh  createdb.sql  indexes.sql  logger.sql  manage.sql  mergedb.sh  migrate.sql  navlog.sql  navprofiles.sql  navschema.py  radius.sql  snmpoid-all.sql  snmpoid.sql  types.sql
doc/subsystems/: mailin.txt  radius.txt
doc/svn2hg/: README  localtags
doc/templates/: __init__.py  layout.html
etc/: Makefile.am  Makefile_conf.am  Makefile_no_conf.am  alertengine.conf  alertengine.conf.in  crontab_cron.nav  crontab_navcron.nav  crontab_root.nav  db.conf  eventengine.conf  fillthresholds.conf  graphite.conf  ipdevpoll.conf  logger.conf.in  logging.conf  mailin.conf  mcc.conf  nav-ssl.conf  nav.conf  navstats.conf  netbiostracker.conf  org.txt.mal  pping.conf  pping.conf.in  seeddb.conf  server.txt.mal  servicemon.conf  smsd.conf  smsd.conf.in  snmptrapd.conf  snmptrapd.conf.in  sortedStats.conf  stats.conf  subtree-sets.in  test.txt  vPServer.conf  vlan.txt.mal
etc/alertmsg/: default-email.txt  default.txt
etc/alertprofiles/: five_periods.conf
etc/apache/: apache.conf.in
etc/arnold/: arnold.conf
etc/conf/: config.py  db.conf.template  diskException.conf.template  getBoksMacs.conf.template  getDeviceData.conf.template  nav.conf.template  navAdmin.conf.template  path.pl  pinger.conf  servmon.conf  vPServer.conf.template
etc/cricket-config/: Defaults  Defaults.in
etc/cron.d/: activeip  activeip.in  cricket.in  dbclean.in  emailreports  emailreports.in  logengine  logengine.in  mactrace  navstats  navstats.in  netbiostracker  networkDiscovery.in  psuwatch  stats.in  thresholdMon.in  thresholdmon  topology  topology.in
etc/geomap/: config.py  popup_network.html  popup_network_open.html  popup_place.html  popup_place_open.html
etc/graphite/: storage-schemas.conf  storage-schemas.conf.example
etc/init.d/: Makefile.am  alertengine  alertengine.in  eventengine  eventengine.in  functions  functions.in  getDeviceData  getDeviceData.in  ipdevpoll.in  pping.in  servicemon.in  smsd  smsd.in  snmptrapd.in
etc/kilde/: cat.txt  product.txt  type.txt  typegroup.txt  vendor.txt
etc/mal/: anv.txt.mal  nettel.txt.mal  server.txt.mal  sted.txt.mal
etc/message/: collect.txt
etc/portadmin/: aliasformat.html  portadmin.conf
etc/report/: front.html  matrix.conf  report.conf
etc/toolbox/: alertprofiles.tool  arnold.tool  auditlog.tool  business.tool  devicehistory.tool  geomap.tool  info.tool  ipam.tool  (+21 more)
htdocs/: Makefile.am
media/: Makefile.am
python/: Makefile.am  pylint.rc  runtests.py
sql/: Makefile.am  README  createdb.sh  indexes.sql  manage.sql  navprofiles.sql  navschema.py  syncdb.py  types.sql
src/: INSTALL  Makefile.am  Makefile.in  build.properties.in
(+7705 files in other folders)
