dnl Process this file with GNU autoconf
AC_INIT(Makefile.in)
AC_REVISION($Revision: $)
AC_PREFIX_DEFAULT(/usr/local/nav)
AC_CONFIG_AUX_DIR(conf)

AC_PROG_INSTALL
AC_PATH_PROG(PYTHON,python)
if test -z "$PYTHON"; then
  AC_MSG_WARN([No python executable found])
else
  if ! ${PYTHON} -c '
import sys
if not hasattr(sys, "version_info") or sys.version_info < (2,3,0):
  sys.exit(1)'; then
    AC_MSG_WARN([Your python version is too old for NAV, we require at least version 2.3.0])
  fi
fi
AC_PATH_PROG(CHEETAH,cheetah)
if test -z "$CHEETAH"; then
  AC_MSG_WARN([No Cheetah found, you will be unable to build any web templates])
fi
AC_PATH_PROG(ANT,ant)
if test -z "$ANT"; then
  AC_MSG_WARN([No Ant found, you need this to build java software])
fi
AC_PATH_PROG(SED, sed)
AC_PATH_PROG(GREP, grep)
AC_PATH_PROG(HG, hg)

AC_SUBST(nav_user)
AC_SUBST(webapps)
AC_SUBST(webroot)
AC_SUBST(javalibdir)
AC_SUBST(pythonlibdir)
AC_SUBST(djangotmpldir)
AC_SUBST(initdir)
AC_SUBST(tooldir)
AC_SUBST(docdir)
AC_SUBST(crondir)
AC_SUBST(VERSION)

dnl Setting some default variables for NAV
nav_user=navcron
webapps='${prefix}/apache/webapps'
webroot='${prefix}/apache/webroot'
pythonlibdir='${libdir}/python'
javalibdir='${libdir}/java'
djangotmpldir='${libdir}/templates'
initdir='${sysconfdir}/init.d'
tooldir='${prefix}/apache/tools'
docdir='${prefix}/doc'
crondir='${sysconfdir}/cron.d'
VERSION=`cat VERSION`
if $GREP -q devel VERSION && ! test -z "$HG" && test -e .hg
then
	VERSION=`$HG identify -i`
fi


AC_OUTPUT(Makefile
	doc/Makefile
	src/build.properties
	src/eventEngine/eventengine
	src/getDeviceData/getDeviceData
	src/getDeviceData/getDeviceData.sh
	src/eventEngine/eventEngine.sh
	src/networkDiscovery/networkDiscovery.sh
	src/getBoksMacs/getBoksMacs.sh
	src/Makefile
	subsystem/dbTools/Makefile
	subsystem/lib-python/Makefile
	subsystem/webFront/Makefile
	subsystem/devBrowser/Makefile
	subsystem/ipinfo/Makefile
	subsystem/ipinfo/templates/Makefile
	subsystem/statemon/Makefile
	subsystem/statemon/pping
	subsystem/statemon/servicemon
	subsystem/seeddb/Makefile
	subsystem/seeddb/src/Makefile
	subsystem/status/Makefile
	subsystem/status/src/Makefile
	subsystem/maintenance/Makefile
	subsystem/messages/Makefile
	subsystem/l2trace/Makefile
	subsystem/l2trace/src/Makefile
	subsystem/logger/src/Makefile
	subsystem/logger/templates/Makefile
	subsystem/logger/bin/Makefile
	subsystem/logger/conf/Makefile
	subsystem/logger/Makefile
	subsystem/deviceManagement/Makefile
	subsystem/machinetracker/src/Makefile
	subsystem/machinetracker/Makefile
	subsystem/report/Makefile
	subsystem/alertprofiles/Makefile
	subsystem/alertengine/Makefile
	subsystem/alertengine/alertengine
	subsystem/webFront/templates/Makefile
	subsystem/thresholdMon/Makefile
	subsystem/smsd/Makefile
	subsystem/smsd/smsd
	subsystem/startstop/Makefile
	subsystem/startstop/functions
	subsystem/arnold/Makefile
	subsystem/arnold/lib/Makefile
	subsystem/arnold/images/Makefile
	subsystem/snmptrapd/Makefile
	subsystem/snmptrapd/snmptrapd
	subsystem/statTools/Makefile
	subsystem/statTools/sortedStats/Makefile
	subsystem/ipdevinfo/Makefile
	subsystem/useradmin/Makefile
	subsystem/netmap/Makefile)

echo
echo "Now run 'make' to build NAV"
