[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.2", "libsass==0.15.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nav"
description = "Network Administration Visualized - A comprehensive, free Network Management System"
authors = [{name="Sikt - Norwegian agency for shared services in education and research", email="nav-support@uninett.no"}]
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "GPLv3"}
keywords = ["nms", "snmp"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Topic :: System :: Networking :: Monitoring",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]
dynamic = ["version"]
dependencies = [
    "importlib_metadata; python_version < '3.8'",
    "importlib_resources; python_version < '3.9'",
]


[project.urls]
Homepage = "https://nav.uninett.no/"

[project.scripts]
alertengine = "nav.bin.alertengine:main"
autoenable = "nav.bin.autoenable:main"
collect_active_ip = "nav.bin.collect_active_ip:main"
emailreports = "nav.bin.emailreports:main"
eventengine = "nav.bin.eventengine:main"
ipdevpolld = "nav.bin.ipdevpolld:main"
logengine = "nav.bin.logengine:main"
macwatch = "nav.bin.macwatch:main"
mailin = "nav.bin.mailin:main"
maintengine = "nav.bin.maintengine:main"
nav = "nav.bin.navmain:main"
navcheckservice = "nav.bin.navcheckservice:main"
navclean = "nav.bin.navclean:main"
navdf = "nav.bin.navdf:main"
navdump = "nav.bin.navdump:main"
naventity = "nav.bin.naventity:main"
navoidverify = "nav.bin.navoidverify:main"
navpgdump = "nav.pgdump:main"
navsnmp = "nav.bin.navsnmp:main"
navstats = "nav.bin.navstats:main"
navsyncdb = "nav.pgsync:main"
navsynctypes = "nav.bin.navsynctypes:main"
navtopology = "nav.bin.navtopology:main"
navuser = "nav.bin.navuser:main"
netbiostracker = "nav.bin.netbiostracker:main"
pping = "nav.bin.pping:main"
radiusparser = "nav.bin.radiusparser:main"
servicemon = "nav.bin.servicemon:main"
smsd = "nav.bin.smsd:main"
navtrapd = "nav.bin.snmptrapd:main"
sortedstats_cacher = "nav.bin.sortedstats_cacher:main"
start_arnold = "nav.bin.start_arnold:main"
t1000 = "nav.bin.t1000:main"
thresholdmon = "nav.bin.thresholdmon:main"

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["python"]


[tool.black]
skip-string-normalization=true
line-length = 88
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.nox
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | python/nav/enterprise/ids\.py     # Autogenerated list of constants
  | python/nav/smidumps/.*\.py        # Autogenerated MIB dumps
  | python/nav/etc/geomap/config\.py  # Not actually a Python file
)
'''

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/nav/issues/{issue})"
wrap = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
