[build-system]
requires = ["setuptools>=80.3.1", "wheel", "setuptools_scm[toml]>=8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nav"
description = "Network Administration Visualized - A comprehensive, free Network Management System"
authors = [{name="Sikt - Norwegian agency for shared services in education and research", email="nav-support@uninett.no"}]
readme = "README.rst"
requires-python = ">=3.9"
license = "GPL-3.0-only"
keywords = ["nms", "snmp"]
classifiers = [
    "Development Status :: 6 - Mature",
    "Topic :: System :: Networking :: Monitoring",
]
dynamic = ["version"]
dependencies = [
    "asciitree==0.3.3",
    "psycopg2==2.9.10",
    "IPy==1.01",
    "pyaml",
    "twisted>=24.7",
    "networkx==2.6.3",
    "Pillow>3.3.2",
    "qrcode>7.4",
    "pyrad==2.1",
    "sphinx==7.4.7",
    "sphinxcontrib-programoutput==0.17",
    "sphinxcontrib-django",
    "Markdown==3.3.6",

    "feedparser==6.0.11",
    "dnspython<3.0.0,>=2.1.0",

    "Django>=4.2,<4.3",
    "django-filter>=2",
    "djangorestframework>=3.14",
    "django-htmx",
    "pytz",

    "iso8601",

    "pynetsnmp-2>=0.1.10",

    "napalm>=5.1.0,<5.2.0",

    "drf-jwt-multi-auth",

    "requests",

    "pyjwt>=2.6.0",

    "distro",

    # The following modules are really sub-requirements of Twisted, not of
    # NAV directly.  They may be optional from Twisted's point of view,
    # but they are required for parts of the Twisted library that NAV uses:
    #
    # PyOpenSSL is required for TLS verification during PaloAlto API GET operations
    "PyOpenSSL==23.3.0",
    # service-identity is required to make TLS communication libraries shut up about potential MITM attacks
    "service-identity==21.1.0",
]

[project.optional-dependencies]
ldap = ["python-ldap==3.4.5"]  # optional for LDAP authentication, requires libldap (OpenLDAP) to build
docs = ["sphinx_rtd_theme>=2.0.0"]

[dependency-groups]
dev = [
    "isort",
    "ruff",
    "towncrier",
    "pre-commit",
    "tox",
]
test = [
    "gunicorn==23.0.0",
    "mock==2.0.0",
    "pytest==8.3.3",
    "pytest-metadata==3.1.1",
    "pytest-cov==6.0.0",
    "pytest-selenium==4.1.0",
    "pytest-timeout==2.3.1",
    "pytest-twisted==1.14.3",
    "pytest-xvfb==3.0.0",
    "pytidylib==0.3.2",
    "selenium<4.11.0",
    "snmpsim>=1.0,!=1.1.6",
    "toml",
    "whisper>=0.9.9",
    "whitenoise==4.1.4",
    # Our version of selenium breaks down if it is allowed to pull in the newest version of urllib3
    "urllib3<2.0",
]

[project.urls]
Homepage = "https://nav.uninett.no/"

[project.scripts]
alertengine = "nav.bin.alertengine:main"
autoenable = "nav.bin.autoenable:main"
collect_active_ip = "nav.bin.collect_active_ip:main"
emailreports = "nav.bin.emailreports:main"
eventengine = "nav.bin.eventengine:main"
ipdevpolld = "nav.bin.ipdevpolld:main"
logengine = "nav.bin.logengine:main"
macwatch = "nav.bin.macwatch:main"
mailin = "nav.bin.mailin:main"
maintengine = "nav.bin.maintengine:main"
nav = "nav.bin.navmain:main"
navcheckservice = "nav.bin.navcheckservice:main"
navclean = "nav.bin.navclean:main"
nav_cisco_auth_sessions = "nav.bin.cisco_auth_sessions:main"
navdf = "nav.bin.navdf:main"
navdump = "nav.bin.navdump:main"
naventity = "nav.bin.naventity:main"
navoidverify = "nav.bin.navoidverify:main"
navpgdump = "nav.pgdump:main"
navrefresh = "nav.bin.navrefresh:main"
navsnmp = "nav.bin.navsnmp:main"
navstats = "nav.bin.navstats:main"
navsyncdb = "nav.pgsync:main"
navsynctypes = "nav.bin.navsynctypes:main"
navtopology = "nav.bin.navtopology:main"
navuser = "nav.bin.navuser:main"
netbiostracker = "nav.bin.netbiostracker:main"
pping = "nav.bin.pping:main"
radiusparser = "nav.bin.radiusparser:main"
servicemon = "nav.bin.servicemon:main"
smsd = "nav.bin.smsd:main"
navtrapd = "nav.bin.snmptrapd:main"
sortedstats_cacher = "nav.bin.sortedstats_cacher:main"
start_arnold = "nav.bin.start_arnold:main"
t1000 = "nav.bin.t1000:main"
thresholdmon = "nav.bin.thresholdmon:main"
navoui = "nav.bin.update_ouis:main"
navdhcpstats = "nav.bin.dhcpstats:main"

[tool.setuptools]
include-package-data = true
zip-safe = false
platforms = ["any"]

[tool.setuptools.package-data]
"nav.web" = ["static/**"]

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["python"]

[tool.ruff]
target-version = "py39"
line-length = 88
include = [
    "python/nav/**/*.py",
    "tests/**/*.py",
    "tools/**/*.py"
]
exclude = [
    "python/nav/enterprise/ids.py",                     # Autogenerated list of constants
    "python/nav/smidumps/*.py",                         # Autogenerated MIB dumps
    "python/nav/etc/geomap/config.py",                  # Not actually a Python file
    "python/nav/snmptrapd/handlers/handlertemplate.py"  # Not in production, just a template
]

[tool.ruff.lint]
select = ["BLE001", "E4", "E501", "E7", "E9", "F"]
ignore = ["E402", "E722", "E731", "F403"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.format]
quote-style = "preserve"

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## [{version}] - {project_date}"
issue_format = "[#{issue}](https://github.com/Uninett/nav/issues/{issue})"
wrap = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true
