nobase_dist_doc_DATA = $(wildcard sql/*.sql) \
                       $(wildcard sql/*.sh) \
                       $(wildcard sql/upgrades/*.sql) \
                       sql/README \
                       sql/upgrades/README \
                       getting-started.txt

bin_SCRIPTS = sql/navschema.py

