nobase_dist_doc_DATA = \
	getting-started.txt \
	$(wildcard cricket/cricket-config/Defaults cricket/cricket-config/*/Defaults cricket/cricket-config/*/*/Defaults) \
	cricket/README \
	cricket/cricket/subtree-sets \
	cricket/public_html/cricket.css \
	$(wildcard mailin/README mailin/alertmsg.d/*) \
	radius/README radius/INSTALL
