nobase_webroot_DATA = $(wildcard images/*/*.gif images/*/*.png images/*/*.jpg js/*.js js/geomap/*.js js/geomap/*/*.js style/*.css style/jqueryui/*/*.css style/jqueryui/*/images/*.png */.htaccess) \
	$(wildcard js/netmap/*.js js/netmap/*/*.js js/netmap/*/*/*.js js/netmap/*/*/*/*.js js/netmap/templates/*.html js/netmap/templates/*/*.html)
