nobase_webroot_DATA = $(wildcard images/*/*.gif \
				 images/*/*.png \
				 images/*/*.jpg \
				 images/*/*.ico \
				 js/*.js        \
				 js/extras/*    \
				 js/libs/*.js   \
				 js/resources/*.js \
				 js/resources/libs/*.js \
				 js/src/*.js   \
				 js/src/*/*.js   \
				 js/dt_plugins/*.js \
				 js/geomap/*.js \
				 js/geomap/*/*.js   \
				 js/src/netmap/*/*.js \
				 js/src/netmap/*/*/*.js \
				 js/src/netmap/*/*/*/*.js \
				 js/src/netmap/templates/*.html \
				 js/src/netmap/templates/*/*.html \
				 style/*.css        \
				 style/jqueryui/*.css \
				 style/jqueryui/images/*.png \
				 */.htaccess)
