sqldocdir=$(docdir)/sql
nobase_dist_sqldoc_DATA = $(wildcard baseline/*.sql) \
                          $(wildcard changes/*.sql) \
                          $(wildcard *.py) \
                          $(wildcard historic-upgrades/*.sql) \
                          README \
                          historic-upgrades/mergedb.sh \
                          historic-upgrades/README
