sqldir=$(datadir)/sql
nobase_dist_sql_DATA = $(wildcard baseline/*.sql) \
                       $(wildcard changes/*.sql) \
                       $(wildcard *.py) \
                       $(wildcard historic-upgrades/*.sql) \
                       README \
                       historic-upgrades/mergedb.sh \
                       historic-upgrades/README
